# Image-Sequence-to-Video-TUI-ffmpeg

./: .gitignore  README.md  build.bat  pyproject.toml  requirements.txt
src/: __init__.py  converter.py  main.py  main_tui.py  models.py  utils.py
tests/: __init__.py  test_models.py  test_utils.py
